# ge-search-portal

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  INGEST.md  LICENSE  PLAN.md  README.md  cloudbuild.yaml  deploy-all.sh
backend/: bqlog.py  config.py  core.py  discovery.py  gcsdoc.py  generate.py  identity.py  main.py  permissions.py  pyproject.toml
docs/: DEEP_READ.md
frontend/: DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  useSuggestions.ts
frontend/src/components/: AnswerCard.tsx  AskPanel.tsx  DocQA.tsx  FeedbackTab.tsx  FilterBar.tsx  Header.tsx  (+8 more)
scripts/: 01_fetch_corpus.py  02_make_metadata.py  03_stage_import.py  04_seed_acls.py  _common.py  add_document.py  catalog.py  catalog_model.py  catalog_source.py  catalog_status.py  de_eval.py  de_search.py  fix_schema.py  fix_titles.py  force_reindex.py  gen_demo_catalog.py  ingest_entrypoint.sh  ingestlog.py  loader.py  postdeploy_check.sh  reconcile.py  replicate_catalog.py  setup_demo.sh  setup_ge_license.sh  sync_metadata.py
seed/: acl_rules.yaml  catalog_delta_add.jsonl  catalog_delta_delete.jsonl  catalog_delta_modify.jsonl  personas.yaml
seed/demo_docs/: demo_incremental_news.html
sql/: analytics.sql
terraform/: .terraform.lock.hcl  apis.tf  bq.tf  data.tf  exports.tf  iam.tf  outputs.tf  run.tf  scheduler.tf  terraform.tfvars.example  vais.tf  variables.tf  versions.tf
tests/: conftest.py  test_core.py  test_discovery.py  test_permissions.py  test_reconcile.py  test_scripts.py
